Added chatgpt generated images to few blog posts